--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="/socket.io/socket.io.js"></script>
+  <title>Node Bootstrap</title>
+</head>
 <body>
-  <app></app>
+  <div id="app"></div>
   <script src="client.js"></script>
 </body>
 </html>
